objects/FSL__User_Territory__c.object
<CustomObject>
    <description>Which Territories are visible to this user (Default = All)</description>
    <fields>
        <fullName>FSL_Setup_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup Resource</label>
        <referenceTo>Setup_Resource__c</referenceTo>
        <relationshipLabel>User Territories</relationshipLabel>
        <relationshipName>User_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__ServiceTerritory__c</fullName>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipName>User_Territories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__Territory_Name__c</fullName>
        <formula>FSL__ServiceTerritory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Territory</label>
    <listViews>
        <fullName>FSL__All_User_Territories</fullName>
        <columns>NAME</columns>
        <columns>FSL__User__c</columns>
        <columns>FSL__ServiceTerritory__c</columns>
        <columns>FSL__Territory_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSL__User__c</field>
            <operation>contains</operation>
            <value>OAG</value>
        </filters>
        <label>All User Territories</label>
    </listViews>
    <nameField>
        <displayFormat>ULID-{000000}</displayFormat>
        <label>User Territory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL_Validate_User_Profile</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(
FSL__User__r.Profile.Name = &quot;CSS_Service_Advanced&quot;,
FSL__User__r.Profile.Name = &quot;CSS Read Only&quot;,FSL__User__r.Profile.Name = &quot;System Administrator&quot;,
FSL__User__r.Profile.Name = &quot;CMI_Read_Only&quot;,
FSL__User__r.Profile.Name = &quot;CMI System Admin&quot;,
FSL__User__r.Profile.Name = &quot;CSS_Support&quot;

))</errorConditionFormula>
        <errorMessage>Only Advanced users can be associated to User Territories as Users</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Validate_User_Setup_Resource</fullName>
        <active>true</active>
        <errorConditionFormula>FSL__User__c &lt;&gt; FSL_Setup_Resource__r.User__c &amp;&amp; NOT (ISBLANK( FSL_Setup_Resource__c))</errorConditionFormula>
        <errorMessage>The User from the Setup Resource has to match the User of User Territory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_territories</fullName>
        <active>true</active>
        <description>CHF-48: As part of User territory creation we need to display only Parent Service territory dropdown however today we are showing both parent and child service territories</description>
        <errorConditionFormula>NOT(ISPICKVAL(FSL__ServiceTerritory__r.Type__c, &quot;Group&quot;))</errorConditionFormula>
        <errorDisplayField>FSL__ServiceTerritory__c</errorDisplayField>
        <errorMessage>Please select the parent territory</errorMessage>
    </validationRules>
</CustomObject>